+ add basic layout

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,6 +1,17 @@
-<div class="ui inverted top pointing menu">
-  <a class="brand item" href="/">
-    <i class="code icon"></i>Console
-  </a>
+<div class="ui top fixed menu">
+    <a class="brand item">
+        <i class="home icon"></i>
+    </a>
 </div>
-<app-menu></app-menu>
+<div class="app-container">
+    <app-menu class="ui vertical menu"></app-menu>
+    <div class="app-content">
+        <div class="heading">
+            <h4>Manage Modules</h4>
+        </div>
+        <div class="content-box">
+            <h4>Manage Modules</h4>
+        </div>
+    </div>
+</div>
+
