--- a/FrontEnd/src/app/menu/menu.component.html
+++ b/FrontEnd/src/app/menu/menu.component.html
@@ -1,3 +1,12 @@
-<p>
-  This is app menu
-</p>
+<a class="item">
+    <i class="cubes icon"></i>
+    <span class="caption">Modules</span>
+</a>
+<a class="item">
+    <i class="cubes icon"></i>
+    <span class="caption">Modules</span>
+</a>
+<a class="item">
+    <i class="cubes icon"></i>
+    <span class="caption">Modules</span>
+</a>
