--- a/FrontEnd/src/app/app.component.css
+++ b/FrontEnd/src/app/app.component.css
@@ -20,6 +20,8 @@ app-menu.vertical.menu {
     border-radius: 0px;
     border: none;
     box-shadow: 0 0px 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0px 0 rgba(0, 0, 0, 0.02);
+    transition-duration: 0.25s;
+    overflow: hidden;
 }
 
 /**
@@ -30,6 +32,7 @@ app-menu.vertical.menu {
     margin-left: 250px;
     background-color: #f5f5f5;
     flex-grow: 1;
+    transition-duration: 0.25s;
 }
 
 .ui.top.fixed.menu {
@@ -51,4 +54,18 @@ app-menu.vertical.menu {
 .app-content .heading h4 {
     font-weight: 500;
     font-size: 20px;
+}
+
+.app-container.collapsed app-menu.vertical.menu {
+    width: 60px;
+}
+
+.app-container.collapsed .app-content {
+    margin-left: 60px;
+}
+
+.ui.top.fixed.menu.collapsed .brand.item {
+    background-color: #2b3d51;
+    color: white;
+    width: 60px;
 }
