+ add entity composer element.

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -16,7 +16,7 @@
     <app-menu class="ui vertical menu"></app-menu>
     <div class="app-content">
         <div class="heading">
-            <h4>Manage Modules</h4>
+            <h4>Manage Users</h4>
         </div>
         <div class="content-box">
             <h4>Manage Modules</h4>
