--- a/FrontEnd/src/app/menu/menu.component.html
+++ b/FrontEnd/src/app/menu/menu.component.html
@@ -1,10 +1,10 @@
 <a class="item">
-    <i class="cubes icon"></i>
-    <span class="caption">Modules</span>
+    <i class="block layout icon"></i>
+    <span class="caption">Dashboard</span>
 </a>
 <a class="item">
-    <i class="cubes icon"></i>
-    <span class="caption">Modules</span>
+    <i class="folder icon"></i>
+    <span class="caption">Entity Definitions</span>
 </a>
 <a class="item">
     <i class="cubes icon"></i>
