--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -15,12 +15,7 @@
 <div class="app-container" [class.collapsed]="collapsed">
     <app-menu class="ui vertical menu"></app-menu>
     <div class="app-content">
-        <div class="heading">
-            <h4>Manage Users</h4>
-        </div>
-        <div class="content-box">
-            <h4>Manage Modules</h4>
-        </div>
+        <router-outlet></router-outlet>
     </div>
 </div>
 
