--- a/FrontEnd/src/app/entity-composer/entity-composer.component.html
+++ b/FrontEnd/src/app/entity-composer/entity-composer.component.html
@@ -1,3 +1,6 @@
-<p>
-  entity-composer works!
-</p>
+<div class="heading">
+    <h4>Managage Entities</h4>
+</div>
+<div class="content-box">
+    <h4>Manage Modules</h4>
+</div>
