--- a/FrontEnd/src/styles/main.css
+++ b/FrontEnd/src/styles/main.css
@@ -72,3 +72,16 @@ h1, h2, h3, h4, h5 {
 app-menu.vertical.menu .item {
     width: 250px;
 }
+
+.app-content .heading {
+    background-color: #fff;
+    display: flex;
+    flex-direction: row;
+    height: 60px;
+    padding: 17px 20px;
+}
+
+.app-content .heading h4 {
+    font-weight: 500;
+    font-size: 20px;
+}
