--- a/FrontEnd/src/styles/main.css
+++ b/FrontEnd/src/styles/main.css
@@ -47,11 +47,17 @@ h1, h2, h3, h4, h5 {
 
 .content-box {
     display: block;
+    position: relative;
     margin: 20px 20px 0px 20px;
     padding: 20px;
     border-radius: 5px;
     background-color: #fff;
     box-shadow: 0 0px 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0px 0 rgba(0, 0, 0, 0.02);
+    transition-duration: 0.25s;
+}
+
+.content-box .active.dimmer {
+    border-radius: 5px;
 }
 
 #search-box input {
