--- a/FrontEnd/src/app/entity-composer/entity-composer.component.html
+++ b/FrontEnd/src/app/entity-composer/entity-composer.component.html
@@ -2,8 +2,33 @@
     <h4>Managage Entities</h4>
 </div>
 <div class="ui blurring content-box">
-    What the heck???
-    <div class="ui active inverted dimmer">
+    <div class="ui inverted dimmer" [class.active]="isLoading">
         <div class="ui text loader">Loading...</div>
     </div>
+
+    <table class="ui table">
+        <thead>
+            <tr>
+                <th>&nbsp;</th>
+                <th *ngFor="let column of columnsData">
+                    {{ column.displayName }}
+                </th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of data">
+                <td>
+                    <div class="ui checkbox">
+                        <input type="checkbox" />
+                        <label></label>
+                    </div>
+                </td>
+                <td *ngFor="let column of columnsData">
+                    {{ item[column.name] }}
+                </td>
+                <td>Actions</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
